package jouable;

public abstract class Jouable
{

}
