package objet.arme;

public class ArmeDistance extends Arme
{
    public ArmeDistance(int degats, int portee)
    {
        super(degats, portee);
    }

    public ArmeDistance()
    {
        super();
    }

    @Override
    public String toString()
    {
        return super.toString();
    }
}
