package objet.arme;

public class Baton extends ArmeCourante
{
    public Baton()
    {
        super();
    }

    @Override
    public String toString()
    {
        return "Bâton : " + super.toString();
    }
}
