package objet.arme;

public class EpeeLongue extends ArmeDeGuerre
{
    public EpeeLongue()
    {
        super();
    }

    @Override
    public String toString() {
        return "EpeeLongue : " + super.toString();
    }
}
