package objet.arme;

public class MasseDarme extends ArmeCourante
{
    public MasseDarme()
    {
        super();
    }

    @Override
    public String toString()
    {
        return "Masse D'arme : " + super.toString();
    }
}
