package objet.arme;

public class Rapiere extends ArmeDeGuerre
{
    public Rapiere()
    {
        super();
    }

    @Override
    public String toString() {
        return "Rapière : " + super.toString();
    }
}
