package objet.armure;

public class ArmureLegere extends Armure
{

    public ArmureLegere()
    {
        super();
    }

    public ArmureLegere(int armure)
    {
        super(armure);
    }

    @Override
    public String toString() {
        return super.toString();
    }
}
