package objet.armure;

public abstract class Equipement
{
    public String getSymbole()
    {
        return "*";
    }
}
