@startuml

'https://plantuml.com/sequence-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members




package jouable
{

    abstract class Jouable <<abstract>>
    {
        + <<create>> Jouable()
        + {abstract}attaquer(other: Jouable)
        + {abstract}toString(): String
        + {abstract}getRepresentation(): String
        + seDeplacer()
        + getPv(): Integer
        + getDexterite(): Integer
        + getVitesse(): Integer
        + getInit(): Integer
        + getForce() : Integer
    }

    package personnage
    {
        class Personnage extends jouable.Jouable
        {
            - m_nom: String

            + <<create>> Personnage (Nom: String, race: Race, classe: Classe, stats: CaracteristiquesBase, equipPorte: EquipementPorte)
            + equiper (objet: Item)
            + ramasser (objet: Item)
            + getNom(): String
            + toString(): String
            + getRepresentation(): String
        }

        Personnage "1" *--> " 1 \nm_race" race.Race : est
        Personnage "1" *--> " 1 \nm_classe" classe.Classe : possède

        package race
        {
            interface Race <<interface>>
            {
                + toString(): String
                + <<create>> Race()
            }

            class Humain implements Race
            {
                + toString(): String
                +<<create>> Humain(stats: Caracteristiques)
                +<<create>> Humain()
                + getPv(): Integer
                + getDexterite(): Integer
                + getVitesse(): Integer
                + getInit(): Integer
                + getForce() : Integer
            }

            class Nain implements Race
            {
                - m_force: Integer
                + toString(): String
                + <<create>> Nain(stats: Caracteristiques)
                + <<create>> Nain()
                + getForce(): Integer
            }

            class Elfe implements Race
            {
                - m_dexterite: Integer
                + toString(): String
                + <<create>> Elfe(stats: Caracteristiques)
                + <<create>> Elfe()
                + getDexterite(): Integer
            }

            class Halfelin implements Race
            {
                - m_dexterite: Integer
                - m_vitesse: Integer
                + toString(): String
                + <<create>> Halfelin(stats: Caracteristiques)
                + <<create>> Halfelin()
                + getDexterite(): Integer
                + getVitesse(): Integer
            }
        }


        package classe
        {
            abstract class Classe <<abstract>>
            {
                m_pv: Integer
                + toString(): String
                + <<create>> Classe(pv: Pv)
                + getPv(): Pv
            }

            class Guerrier extends Classe
            {
                + <<create>> Guerrier()
                + toString(): String
            }

            class Clerc extends Classe
            {
                + <<create>> Clerc()
                + toString(): String
            }

            class Magicien extends Classe
            {
                + <<create>> Magicien()
                + toString(): String
            }

            class Roublard extends Classe
            {
                + <<create>> Roublard()
                + toString(): String
            }
        }
    }

    package monstre
    {
        class Monstre extends jouable.Jouable
        {
            - m_numero : Optional<Integer>
            - m_classeArmure : Integer
            - m_portee : Integer
            - m_degats : Integer
            + <<create>> Monstre (portee : Integer, degats : Integer, espece : Espece)
            + <<create>> Monstre (portee : Integer, degats : Integer, espece : Espece, numero : Integer)
            + getClasseArmure() : Integer
            + getRepresentation(): String
            + toString(): String
        }

    }
}

package stats
{
        class CaracteristiquesBase
        {
            - m_currentPv: Integer
            - m_pvMax: Integer
            - m_force: Integer
            - m_dexterite Integer
            - m_vitesse: Integer
            - m_initiative: Integer
            + <<create>> Caractéristiques (pv : Pv, force : Force, dexterite : Dexterite, vitesse : Vitesse, initiative : Initiative)
            + toString(): String
            + getPv(): Integer
            + getDexterite(): Integer
            + getVitesse(): Integer
            + getInit(): Integer
            + getForce() : Integer
        }

        class CaracteristiquesMonstre extends CaracteristiquesBase
        {

            - m_classeArmure: Integer
            + <<create>> Caractéristiques (pv : Pv, force : Force, dexterite : Dexterite, vitesse : Vitesse, initiative : Initiative)
            + toString(): String
            + getPv(): Integer
            + getDexterite(): Integer
            + getVitesse(): Integer
            + getInit(): Integer
            + getForce() : Integer
            + getClasseArmure(): Integer
        }

        Jouable "1" *--> "1 \nm_caracteristiques" stats.CaracteristiquesBase : détient
        Humain "1" *--> " 1 \nm_caracteristiques" stats.CaracteristiquesBase : detient

}



package objet
{
    abstract class Equipement <<abstract>>
    {
        getSymbole(): String
    }

    package armure
    {
         abstract class Armure <<abstract>> implements objet.Equipement
         {
            - m_classeArmure: Integer
            + <<create>> Armure (carac: ClasseArmure)
            + getClasseArmure(): Integer
            + toString(): String
         }

         abstract class ArmureLourde <<abstract>> extends Armure
         {
            - m_vitesse: Integer
            + <<create>> ArmureLourde(carac: ClasseArmure)
            + toString(): String
            + getVitesse(): Integer
         }

         abstract class ArmureLegere <<abstract>>  extends Armure
         {
            + <<create>> ArmureLegere ()
            + toString(): String
         }

         class ArmureEcailles extends ArmureLegere
         {
            + <<create>> ArmureEcaille()
            + toString(): String
         }

         class DemiPlate extends ArmureLegere
         {
            + <<create>> ArmureLourde()
            + toString(): String
         }

         class CoteMailles extends ArmureLourde
         {
            + <<create>> CoteMailles()
            + toString(): String
         }

         class Harnois extends ArmureLourde
         {
            + <<create>> Harnois()
            + toString(): String
         }
    }
    package arme
    {

        abstract class Arme <<abstract>> implements objet.Equipement
        {
            - m_degats: Integer
            - m_portee: Integer
            + <<create>> Arme (degats: Integer, portee: Integer)
            + getDegats(): Integer
            + getPortee(): Integer
            + setDegats(): Void
            + SetPortee(): Void
            + toString(): String
        }

         abstract class ArmeCourante <<abstract>> extends Arme
         {
            + <<create>> ArmeCourante  ()
            + toString(): String
         }

         abstract class ArmeDeGuerre <<abstract>> extends Arme
         {
            - m_vitesse: Integer
            - m_force: Integer
            + <<create>> ArmeDeGuerre  ()
            + toString(): String
            + getVitesse(): Integer
            + getForce(): Integer
         }

         abstract class  ArmeDistance <<abstract>> extends Arme
         {
            + <<create>> ArmeDistance ()
            + toString(): String
         }

         class Baton extends ArmeCourante
         {
            + <<create>> Baton()
            + toString(): String
         }

         class MasseDarme extends ArmeCourante
         {
            + <<create>> MasseDarme()
            + toString(): String
         }

         class EpeeLongue extends ArmeDeGuerre
         {
            + <<create>> EpeeLongue()
            + toString(): String
         }

         class Rapiere extends ArmeDeGuerre
         {
            + <<create>> Rapiere()
            + toString(): String
         }

         class ArbaleteLegere extends ArmeDistance
         {
            + <<create>> ArbaleteLegere()
            + toString(): String
         }

         class Fronde extends ArmeDistance
         {
            + <<create>> Fronde()
            + toString(): String
         }

         class ArcCourt extends ArmeDistance
         {
            + <<create>> ArcCourt()
            + toString(): String
         }
     }
}

 Personnage "1" *--> " 1 \nm_inventaire" objet.Equipement : possède
 Personnage "1" *--> " 1 \nm_arme" objet.arme.Arme : possède
 Personnage "1" *--> " 1 \nm_armure" objet.armure.Armure : possède

 Classe "1..*" *--> "1..* \nm_listeEquipement" objet.Equipement : détient


 class De
 {
    - m_nbDes : Integer
    - m_nbFace : Integer
    + jeterDes (nbDes : Integer, nbFaceDes : Integer) : Integer
    + toString()
 }

 package donjon
 {

    class Donjon
    {
        - m_longueur : Integer
        - m_largeur : Integer
        + <<create>>Donjon()
        + afficher() : String
        + verifCasePrise() : Boolean
        + retournerLargeur() : Integer
        + retournerLongeur() : Integer
    }

    class Position
    {
        - m_x : Integer
        - m_y : Integer
        + <<create>>ExplorationDuDonjon
        + toString()

    }

    class PositionsDesObstacles
    {
       - dictionnaire : Obstacle[*]
       + <<create>>PositionsDesObstacles
       + ajouterObstacle()
       + toString(): String
    }

    class PositionsDesEquipements
    {
       - dictionnaire : Equipement[*]
       + <<create>>PositionsDesEquipements
       + ajouterEquipement(Position, Equipement)
       + toString(): String
    }

    class  PositionsDesJouables
    {
        - dictionnaire : Jouable[*]
        + <<create>> PositionsDesJouables
        + ajouterJouable(Position, Jouable)
        + toString(): String
    }

    class Obstacle
    {
       + toString(): String
    }
 }
 Donjon "1" *--> " 1 \nm_dicoItems" PositionsDesEquipements : detient
 Donjon "1" *--> " 1 \nm_dicoJouable"  PositionsDesJouables : detient
 Donjon "1" *--> " 1 \nm_dicoObstacle" PositionsDesObstacles : detient

 PositionsDesObstacles "1..*" *--> " 1..* \n" Obstacle : detient
 PositionsDesEquipements "1..*" *--> " 1..* \n" Equipement : detient
  PositionsDesJouables "1..*" *--> " 1..* \n" Jouable : detient
package mj
{
    class InitialiserPersonnage
    {
        -m_nbJoueur : Integer
        + <<create>> InitialiserJoueurs()
        + instancierToutPerssonages()
        + instancierPerssonage()
        + presentationJoueurs()



    }
    class InitialiserDonjon
    {
        - m_donjon : Donjon
        + <<create>> InitialiserDonjon(Personnage[*])
        + ajouterObstacle()
        + creerToutLesMonstres()
        + creerUnMonstre()
        + ajouterMonstre()
        + placerJouable
        + determinerOrdreDesJouables()
        + changerOrdreDeUnJouable()
        + retournerListeJouable()


        + instancierDonjonPrefait()
    }

    class MaitreDuJeu
    {
        - m_listeJouableDuDonjonEncours : Jouable[*]
        - m_nbDonjonFini : Integer
        - donjonEnCour : ExplorationDuDonjon
        + <<create>> MaitreDuJeu()
        + creerUnDonjon()
        + commencerDonjon()
        + creerPersonnage()
        + verifierMonstresTousMorts() : Boolean
        + verifierAucunPerssonageMort() : Boolean
        + presentationJoueurs()
        + presentationSituationDuDonjon()
    }
    class ExplorationDuDonjon
    {
        - m_listeJouableDuDansLOrdre : List<Jouable>
        - m_donjonExplore : Donjon
        + commencer()
        + Tourde(jouable)
        + choixdeLAction(jouable)
        + Attaquer(jouable)
        + SeDeplacer(jouable)
        + Ramasser(jouble)
    }
}

 class main
     {
        + {static} main (arg:Sring[])
     }


MaitreDuJeu .> ExplorationDuDonjon : <<use>>
ExplorationDuDonjon"1" *--> " 1 \n" Donjon : detient
MaitreDuJeu .>InitialiserDonjon : <<use>>
MaitreDuJeu .>InitialiserPersonnage : <<use>>

InitialiserDonjon "1..*" *--> " 1..* \n" Jouable: -m_listeJouable
ExplorationDuDonjon"1..*" *--> " 1..* \n" Jouable: -m_listeJouableDonjonEncours

@enduml

